Replaced all images of places to my choice of places to visit

--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/boracay.jpg" style="width:100%;min-height:200px">
+  <img src="img/bohol.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Boracay Beach</h2>
+  <h2>Bohol</h2>
   <p>
-    Boracay Island in the Philippines has been called the Ibiza of Asia, a honeymooner’s dream and a backpacker’s secret, but as the number of visitors increased, so too did the environmental issues. In an attempt to save the island’s ecosystem from ruin, in 2018 the island was closed for six months. Culture Trip speaks to locals about the effect the shutdown had.
+    Its color is the main reason it's called Bohol Chocolate Hills. In the rainy season, the grass blanketing the hills in the Philippines gives them a soft and lush appearance. While in the summer, the vegetation dies off and turns to a chocolatey brown hue, giving them their name.
+  </p>
+</div>
+
+</div>
+<div class="w3-row w3-margin">
+
+<div class="w3-third">
+  <img src="img/coron.jpg" style="width:100%;min-height:200px">
+</div>
+<div class="w3-twothird w3-container">
+  <h2>Coron</h2>
+  <p>
+    Coron is a tropical island in the province of Palawan in the Philippines. Coron is best known for world-class World War II-era wreck diving, the island also offers limestone karst landscapes, beautiful beaches, crystal-clear freshwater lakes, and shallow-water coral reefs.
   </p>
 </div>
 
@@ -30,9 +43,9 @@
   <img src="img/elnido.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>El Nido Palawan</h2>
+  <h2>El Nido</h2>
   <p>
-    You’ve probably seen photographs of the stunning limestone formations around El Nido rising majestically above the turquoise water. It is one of the most popular destinations in the Philippines and for good reason, the nearby islands and beaches are absolutely stunning. But the actual town of El Nido leaves something to be desired. The infrastructure has not yet caught up with the massive influx of tourists. Which means a lot of construction, contaminated water, questionable toilets, and high prices.
+    El Nido is known for its stunning lagoons, white sand beaches, rocky islets, towering limestone cliffs, and glasslike waters teeming with marine life. The island has earned nothing but praises from visitors, and numerous accolades of being one the best island and beach destinations in the world.
   </p>
 </div>
 
@@ -40,25 +53,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/chocolatehills.jpg" style="width:100%;min-height:200px">
+  <img src="img/laoangisla.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Chocolate Hills</h2>
+  <h2>Laoang Isla</h2>
   <p>
-    According to legends, the Chocolate Hills existed because of a weeping giant who had been disappointed in love, and the hills grew where his tears fell. In another legend, two giants went to war and lobbed boulders at each other for days. The giants eventually resolved their differences, but the mounds remained where the rocks landed.
-  </p>
-</div>
-
-</div>
-<div class="w3-row w3-margin">
-
-<div class="w3-third">
-  <img src="img/puerto-princesa-underground-river.jpg" style="width:100%;min-height:200px">
-</div>
-<div class="w3-twothird w3-container">
-  <h2>Undergroud River</h2>
-  <p>
-    It’s not surprising at all when Palawan has been recognized as the best island in the world by international travel magazines. With its pristine beaches and breathtaking lagoons, you will never be disappointed at what’s waiting for you. One charming treasure of Palawan that truly stands out is the Puerto Princesa Subterranean River National Park.
+    Is a Island - a tract of land, smaller than a continent, surrounded by water at high wate
     </p>
 </div>
 
@@ -66,12 +66,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/banauerice.jpg" style="width:100%;min-height:200px">
+  <img src="img/mayon.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Banaue Rice Terraces</h2>
+  <h2>Taal Volcano</h2>
   <p>
-    Ang Hagdan-hagdang Palayan ng Banawe (Ingles: Banaue Rice Terraces) ay mga 2000-taong gulang na mga hagdanang-taniman na nililok sa mga bulubundukin ng Ifugao sa Pilipinas ng mga ninuno ng mga katutubong mamamayanang Batad. Karaniwang tinatawag ito ng mga Pilipino bilang "Ikawalong Kahangahangang Pook sa Mundo". Tinatawag itong payew sa katutubong pananalita sa Ifugao.
+    Taal volcano is in a caldera system located in southern Luzon island and is one of the most active volcanoes in the Philippines. It has produced around 35 recorded eruptions since 3,580 BCE, ranging from VEI 1 to 6, with the majority of eruptions being a VEI 2. The caldera contains a lake with an island that also contains a lake within the Main Crater.
   </p>
 </div>
 
@@ -79,12 +79,12 @@
 <div class="w3-row w3-margin">
 
 <div class="w3-third">
-  <img src="img/taal.jpg" style="width:100%;min-height:200px">
+  <img src="img/paguriran.jpg" style="width:100%;min-height:200px">
 </div>
 <div class="w3-twothird w3-container">
-  <h2>Taal Volcano</h2>
+  <h2>Paguriran Island</h2>
   <p>
-    Mayon Volcano-north of Legazpi city, Albay, Bicol Mayon Volcano, also known as Mount Mayon , is an active mountain in the province of Albay , on the island of Luzon in the Philippines.
+    Located in Bacon District this beautiful lagoon surrounded by rock formations is a must-visit for those in the province. Its emerald waters will draw you in for a swim to douse the afternoon heat. Wade in its waters while forgetting your worries. Don’t forget to climb up the rocks to get a stunning overlooking view of Paguriran, the nearby beach, and the ocean.
   </p>
 </div>
 
